syntax = "proto2";

package sf.solana.block_meta.v1;

message PbCreateNftLayout {
  required string name = 1;
  required string uri = 2;
}

message PbEditDataLayout {
  required uint32 offset = 1;
  repeated uint32 data = 2;
}

message Arg {
  required string instruction_type = 1;
  optional PbCreateNftLayout createNft = 2;
  optional PbEditDataLayout editData = 3;
}

message InputAccounts {
  optional string mint = 1;
  optional string name_account = 2;
  optional string central_state = 3;
  optional string spl_token_program = 4;
  optional string system_program = 5;
  optional string rent_account = 6;
  optional string fee_payer = 7;
  optional string collection_mint = 8;
  optional string edition = 9;
  optional string metadata_account = 10;
  optional string central_state_nft_ata = 11;
  optional string metadata_program = 12;
  optional string spl_name_service_program = 13;
  optional string ata_program = 14;
  optional string nft_destination = 15;
  optional string nft_record = 16;
  optional string name_owner = 17;
  optional string edition_account = 18;
  optional string collection_metadata = 19;
  optional string metadata_signer = 20;
  optional string nft_source = 21;
  optional string nft_owner = 22;
  optional string nft = 23;
  optional string token_destination = 24;
  optional string token_source = 25;
  optional string nft_account = 26;
}

message Meta {
  required string block_date = 1;
  required int64 block_time = 2;
  required string tx_id = 3;
  required string dapp = 4;
  required uint64 block_slot = 5;
  required uint32 instruction_index = 7;
  required bool is_inner_instruction = 8;
  required uint32 inner_instruction_index = 9;
  required string instruction_type = 10;
  required Arg args = 11;
  required InputAccounts input_accounts = 12;
}

message Output {
  repeated Meta data = 1;
}